# sokoban-bevy

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml  struct.md
assets/levels/: level_01.txt  level_02.txt  level_03.txt  level_04.txt  level_05.txt
docs/: BEVY_ECS_PATTERNS.md  LEVEL_FORMAT.md  LEVEL_TRANSITIONS.md
src/: components.rs  constants.rs  embedded.rs  levels.rs  main.rs  resources.rs  states.rs
src/systems/: level.rs  mod.rs  player.rs  restart.rs  ui.rs  win.rs
